@@ -18,12 +18,43 @@
 6
 [1, 0, 0, -2, -1, 0, 0, 0, -2, 0, 0, 0, -3, 0, 0, 4, 6, 0, 0, 2]
 [1, 0, 0, -2, -1, 0, 0, 0, -2, 0, 0, 0, -3, 0, 0, 4, 6, 0, 0, 2]
+[[65, 18; 0, 1], [1, 0, 0, 0], 2, [[5, [-2, 1]~, 1, 1, [2, -1; 1, 2]], 1; [1
+3, [5, 1]~, 1, 1, [-5, -1; 1, -5]], 1], [[1, 5, [1, 0, 0, 0], 1], [1, 6, [1,
+ 0, 0, 0], 2]]]
+[[65, 18; 0, 1], [1/17, 0, 0, 0], 2, [[5, [-2, 1]~, 1, 1, [2, -1; 1, 2]], 1;
+ [13, [5, 1]~, 1, 1, [-5, -1; 1, -5]], 1], [[1, 5, [1, 0, 0, 0], 1], [1, 6, 
+[1, 0, 0, 0], 2]]]
+[[65, 18; 0, 1], [1, 0, 0, 0], 2, [[5, [-2, 1]~, 1, 1, [2, -1; 1, 2]], 1; [1
+3, [5, 1]~, 1, 1, [-5, -1; 1, -5]], 1], [[1, 5, [1, 0, 0, 0], 1], [1, 6, [1,
+ 0, 0, 0], 2]]]
 [Mod(0, a^2 - 870), Mod(0, a^2 - 870), Mod(0, a^2 - 870), Mod(a, a^2 - 870),
  Mod(1, a^2 - 870)]
 [Mod(1/20880*a, a^2 - 870), Mod(-1/501120*a - 41/167040, a^2 - 870), Mod(-1/
 10440*a - 17/24, a^2 - 870), Mod(5011/3487795200*a + 2077/12026880, a^2 - 87
 0)]
 [0, 1]~
+[1, 0, 0, 0]
+[[64000001644800020229280152976800751644426376663403572812780612976355750337
+16572028, 0; 0, 640000016448000202292801529768007516444263766634035728127806
+1297635575033716572028], [1, 0, 0, 0], 6, [[2, [0, 1]~, 2, 1, [0, 870; 1, 0]
+], 4; [10000000019, [10000000019, 0]~, 1, 2, 1], 2; [20000000089, [200000000
+89, 0]~, 1, 2, 1], 2; [40000000520000003750000013929460019555447, [400000005
+20000003750000013929460019555447, 0]~, 1, 2, 1], 1], [[4, -1, [1, 1, 1, Mod(
+1/435*a + 1, a^2 - 870)], 1], [2, -4, [1, 0, 0, 0], 3], [2, -3, [1, 0, 0, 0]
+, 2], [1, 5, [1, 0, 0, 0], 1]]]
+[[16000000182400000866400002194880003127714802377096080752773084, 0; 0, 1600
+0000182400000866400002194880003127714802377096080752773084], [1, 0, 0, 0], 3
+, [[2, [0, 1]~, 2, 1, [0, 870; 1, 0]], 4; [7, [-3, 1]~, 1, 1, [3, 870; 1, 3]
+], 1; [7, [3, 1]~, 1, 1, [-3, 870; 1, -3]], 1; [103, [-47, 1]~, 1, 1, [47, 8
+70; 1, 47]], 1; [103, [47, 1]~, 1, 1, [-47, 870; 1, -47]], 1; [1993, [-685, 
+1]~, 1, 1, [685, 870; 1, 685]], 1; [1993, [685, 1]~, 1, 1, [-685, 870; 1, -6
+85]], 1; [10000000019, [10000000019, 0]~, 1, 2, 1], 2; [27836679629744327661
+656297107448887, [27836679629744327661656297107448887, 0]~, 1, 2, 1], 1], [[
+4, -1, [1, 1, 1, Mod(1/435*a + 1, a^2 - 870)], 1], [1, 5, [1, 0, 0, 0], 1], 
+[1, 5, [1, 0, 0, 0], 1], [1, 5, [1, 0, 0, 0], 1], [1, 5, [1, 0, 0, 0], 1], [
+1, 5, [1, 0, 0, 0], 1], [1, 5, [1, 0, 0, 0], 1], [2, -4, [1, 0, 0, 0], 3], [
+1, 5, [1, 0, 0, 0], 1]]]
 [1]~
 [1]~
-Total time spent: 196
+[1, [1, 0, 0, 0], 1, matrix(0,2), []]
+Total time spent: 726
